[tool.poetry]
name = "jupyter-notebook-with-vscode-template"
version = "0.1.0"
description = ""
authors = ["tokibi"]
readme = "README.md"
packages = [{include = "jupyter_notebook_with_vscode_template"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
ipython = "^8.7.0"
scikit-learn = "^1.1.3"
pandas = "^1.5.2"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
